--- a/Games Workshop Bot/Games Workshop Bot.csproj
+++ b/Games Workshop Bot/Games Workshop Bot.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
     <PackageReference Include="Selenium.Support" Version="4.10.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.10.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="117.0.5938.8800" />
   </ItemGroup>
 
   <ItemGroup>
